# quill

./: .env.example  .gitignore  HANDOFF.md  README.md
.github/workflows/: ci.yml
apps/desktop/: .prettierignore  .prettierrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs  telemetry.rs
apps/desktop/src-tauri/src/commands/: brain.rs  canon.rs  drafting.rs  llm.rs  manuscript.rs  mod.rs  structure.rs  system.rs  voice.rs
apps/desktop/src-tauri/src/models/: brain.rs  canon.rs  commit.rs  mod.rs  project.rs  settings.rs  structure.rs
apps/desktop/src-tauri/src/services/: mod.rs
apps/desktop/src-tauri/src/services/brain/: cross_link.rs  mod.rs  store.rs
apps/desktop/src-tauri/src/services/canon/: chunker.rs  debounce.rs  docs.rs  extract.rs  extraction.rs  ingest.rs  inspect.rs  mod.rs  rules.rs  watch_service.rs  watcher.rs
apps/desktop/src-tauri/src/services/crypto/: argon.rs  mod.rs  sealed.rs  store.rs
apps/desktop/src-tauri/src/services/drafting/: mod.rs  orchestrator.rs  prompt.rs
apps/desktop/src-tauri/src/services/git/: mod.rs
apps/desktop/src-tauri/src/services/llm/: audit.rs  chat.rs  embeddings.rs  gemini.rs  groq.rs  mock.rs  mod.rs  provider.rs
apps/desktop/src-tauri/src/services/manuscript/: mod.rs  progress.rs  store.rs
apps/desktop/src-tauri/src/services/storage/: atomic.rs  mod.rs  project.rs  settings.rs
apps/desktop/src-tauri/src/services/structure/: mod.rs  outline_import.rs  store.rs
apps/desktop/src-tauri/src/services/vector/: json_store.rs  mod.rs
apps/desktop/src-tauri/src/services/voice/: extractor.rs  fingerprint.rs  mod.rs  store.rs
apps/desktop/src/components/editor/: DiffReviewPane.tsx  SceneMetaStrip.tsx
apps/desktop/src/components/shell/: AISuggestedBadge.tsx  BootError.tsx  ProjectPicker.tsx  PromptDialog.tsx  Sidebar.tsx  TitleBar.tsx  WindowDragBar.tsx
apps/desktop/src/lib/: cn.ts  err.ts  ipc.ts  readability.test.ts  readability.ts  sentence_diff.test.ts  sentence_diff.ts
apps/desktop/src/routes/: Beats.tsx  Bible.tsx  Canon.tsx  DraftingPanel.tsx  Ideas.tsx  Manuscript.tsx  Research.tsx  Settings.tsx  Threads.tsx
apps/desktop/src/stores/: app.ts
apps/desktop/src/styles/: globals.css
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MANUAL.html  MANUAL.md  PRD.md  PRIVACY.md
scripts/: bootstrap.sh
