[package]
name = "quill-desktop"
version = "0.1.0"
description = "Quill — a domain-tuned writing companion for YA fantasy."
authors = ["Shamgar"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "quill_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri ---
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# --- async runtime ---
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }

# --- serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- error handling ---
thiserror = "2"
anyhow = "1"

# --- ids, time ---
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

# --- crypto: Argon2id KDF + AES-256-GCM ---
argon2 = "0.5"
aes-gcm = { version = "0.10", features = ["aes", "alloc"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

# --- filesystem helpers ---
directories = "5"

# Git auto-commit is implemented by shelling out to the system `git` binary.
# (Xcode Command Line Tools provide it on macOS — already a documented
# prerequisite.) This keeps build times fast and the dependency surface tiny;
# the Rust-native `gix` crate is not yet stable across minor versions for
# our limited needs (init / add / commit / log).

# --- tracing ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
